--- a/appsettings.json
+++ b/appsettings.json
@@ -6,21 +6,20 @@
     }
   },
   "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "cs": "Data Source=DESKTOP-21FM4O1\\MSSQLSERVER01;Database=MedicalAppDB;Integrated Security=True;"
+  },
   "Jwt": {
-    "Key": "your_secret_key",
-    "Issuer": "your_issuer",
-    "Audience": "your_audience"
+    "Key": "اكتب الكي هنا",
+    "Issuer": "SecureApi",
+    "Audience": "SecureApiUser",
+    "ExpiresAt": 30
   },
   "EmailSettings": {
-    "SmtpServer": "smtp.gmail.com",
-    "SmtpPort": "587",
-    "SenderName": "Medical App",
-    "SenderEmail": "your-email@gmail.com",
-    "Username": "your-email@gmail.com",
-    "Password": "your-app-specific-password" // استخدم App Password إذا كان لديك 2FA
-  },
-  "ConnectionStrings": {
-    "DefaultConnection": "Data Source=DESKTOP-21FM4O1\\MSSQLSERVER01;Database=MedicalAppDB;Integrated Security=True;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False"
+    "Host": "smtp.gmail.com",
+    "Port": "587",
+    "Username": "اكتب ايميلك@gmail.com",
+    "Password": "gdasycixnxspubve",
+    "FromEmail": "اكتب ايميلك@gmail.com"
   }
-
 }
